# X-gpt

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configs/: README.md
configs/dataset/: chat-basics-correction.yaml  codesearchnet-python.yaml  coding-smoke.yaml  default.yaml  english-conversations-mixed.yaml  english-conversations.yaml  oasst2-chat.yaml  tinystories-10m.yaml
configs/evaluation/: codesearchnet-cpu.yaml  coding-smoke.yaml  default.yaml
configs/inference/: default.yaml
configs/model/: codesearchnet-cpu.yaml  coding-smoke.yaml  default.yaml  modern-super.yaml
configs/preprocessing/: default.yaml
configs/tokenizer/: codesearchnet-python.yaml  coding-smoke.yaml  default.yaml
configs/training/: chat-basics-correction-cpu.yaml  codesearchnet-cpu.yaml  coding-smoke.yaml  default.yaml  english-conversations-mixed-cpu.yaml  oasst2-chat-cpu.yaml  tinystories-10m-cpu.yaml
deployment/: Dockerfile  README.md
docs/: architecture.md  compatibility.md  development.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md  roadmap.md  runbook.md
scripts/: prepare_codesearchnet_instructions.py  prepare_coding_smoke.py  prepare_english_conversations.py  prepare_openassistant_conversations.py  prepare_tinystories.py
src/project_genesis/: __init__.py  experiment.py  preflight.py
src/project_genesis/benchmark/: __init__.py  completion.py  core.py  report.py
src/project_genesis/chat/: __init__.py  conversation.py  engine.py
src/project_genesis/configuration/: __init__.py  loader.py  models.py
src/project_genesis/datasets/: __init__.py  config.py  integrity.py  manifest.py  records.py  registry.py  sources.py  storage.py
src/project_genesis/evaluation/: __init__.py  config.py  metrics.py
src/project_genesis/inference/: __init__.py  bundle.py  chat_ui.py  config.py  generation.py  load_probe.py  service.py
src/project_genesis/model/: __init__.py  attention.py  block.py  config.py  decoder.py  embeddings.py  feed_forward.py  normalization.py  residual.py
src/project_genesis/preprocessing/: __init__.py  config.py  pipeline.py  readers.py
src/project_genesis/tokenizer/: __init__.py  config.py  evaluation.py  model.py  storage.py  trainer.py
src/project_genesis/training/: __init__.py  checkpoint.py  config.py  data.py  optimization.py  trainer.py
src/project_genesis/utilities/: __init__.py  files.py
tests/: test_experiment.py  test_package.py  test_prepare_codesearchnet_instructions.py  test_prepare_english_conversations.py  test_prepare_openassistant_conversations.py  test_prepare_tinystories.py
tests/benchmark/: test_benchmark.py
tests/chat/: test_chat.py
tests/configuration/: test_loader.py  test_models.py
tests/datasets/: test_config.py  test_manifest.py  test_records.py
tests/evaluation/: test_evaluation.py
tests/inference/: test_deployment.py  test_generation.py  test_hardening.py
tests/model/: test_attention.py  test_decoder.py  test_embeddings.py  test_model_config.py  test_primitives.py
tests/preprocessing/: test_pipeline.py  test_preprocessing_config.py  test_readers.py
tests/tokenizer/: test_bpe.py  test_storage.py  test_tokenizer_config.py
tests/training/: test_training.py
