[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[project]
name = "project-genesis"
version = "0.1.0"
description = "A decoder-only large language model built from randomly initialized weights."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Project Genesis contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.139.2,<0.140",
  "numpy>=2.0,<3",
  "pypdf>=6.0,<7",
  "pyyaml>=6.0.2,<7",
  "torch>=2.12,<3",
  "uvicorn>=0.51,<0.52",
]

[project.scripts]
genesis-load-test = "project_genesis.inference.load_probe:main"
genesis-preflight = "project_genesis.preflight:main"
genesis-serve = "project_genesis.inference.service:main"
genesis-train = "project_genesis.experiment:main"

[dependency-groups]
dev = [
  "httpx2>=2.7,<2.8",
  "mypy>=1.18,<2",
  "pytest>=8.4,<10",
  "ruff>=0.14,<0.16",
  "types-pyyaml>=6.0.12,<7",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
